--- a/Project-5/index.html
+++ b/Project-5/index.html
@@ -106,6 +106,54 @@
         </div>
     </div>
 
+    <div class="services-section">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="service-info">
+                        <div class="single-service-list">
+                            <img src="Images/project-5-service-bg-1.png" alt="">
+                            <h3>Web Analytics</h3>
+                            <p>Li said Beijing’s latest would make it harder 
+                                China to meet its air quality targets and 
+                                serve as an alert that progress 
+                            </p>
+                        </div>
+                        <div class="single-service-list">
+                            <img src="Images/project-5-service-bg-2.png" alt="">
+                            <h3>Inbound Markeitng</h3>
+                            <p>Li said Beijing’s latest would make it harder 
+                                China to meet its air quality targets and sho 
+                                serve as an alert that progress 
+                            </p>
+                        </div>
+                        <div class="single-service-list">
+                            <img src="Images/project-5-service-bg-3.png" alt="">
+                            <h3>Ads on Target</h3>
+                            <p>Li said Beijing’s latest would make it harder 
+                                China to meet its air quality targets and sh
+                                serve as an alert that progress 
+                            </p>
+                        </div>
+                        <div class="single-service-list">
+                            <img src="Images/project-5-service-bg-4.png" alt="">
+                            <h3>PPC Management</h3>
+                            <p>Li said Beijing’s latest would make it harder 
+                                China to meet its air quality targets and sho
+                                serve as an alert that progress 
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="service-bg">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js" integrity="sha512-pumBsjNRGGqkPzKHndZMaAG+bir374sORyzM3uulLV14lN5LyykqNk8eEeUlUkB3U0M4FApyaHraT65ihJhDpQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js" integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
