--- a/Project-5/index.html
+++ b/Project-5/index.html
@@ -153,6 +153,21 @@
         </div>
     </div>
 
+    <div class="video-section video-bg">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6 offset-md-4 text-center">
+                    <div class="video-title">
+                        <h2>How traffic work ?</h2>
+                        <p>When the guidelines were agreed, it was clear that this was more than 
+                            rhetoric. EU governments have essentially committed
+                        </p>
+                    </div>
+                    <a href="" class="video-btn"><i class="fa fa-play"></i></a>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js" integrity="sha512-pumBsjNRGGqkPzKHndZMaAG+bir374sORyzM3uulLV14lN5LyykqNk8eEeUlUkB3U0M4FApyaHraT65ihJhDpQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js" integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
