--- a/Project-5/index.html
+++ b/Project-5/index.html
@@ -169,6 +169,60 @@
         </div>
     </div>
 
+    <div class="feature-section">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="feature-bg-1">
+                        <img src="Images/project-5-feature-bg-2.png" alt="">
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="feature-details">
+                        <div class="feature-title">
+                            <h3>Our Key Features</h3>
+                            <p>Latest air pollution crisis would also remind the public that while industrial 
+                                smog remained a pressing issue.
+                            </p>
+                        </div>
+                        <div class="single-feature-list">
+                            <img src="Images/project-5-feature-bg-01.png" alt="">
+                            <h5>Unique & Creative Design</h5>
+                            <p>Writers and stars of Veep have responded incredulously to the new
+                                Australian politician required stitches after knocking himself uncon
+                                while laughing at the new season. 
+                            </p>
+                        </div>
+                        <div class="single-feature-list">
+                            <img src="Images/project-5-feature-bg-02.png" alt="">
+                            <h5>Unique & Creative Design</h5>
+                            <p>Writers and stars of Veep have responded incredulously to the new
+                                Australian politician required stitches after knocking himself uncon
+                                while laughing at the new season. 
+                            </p>
+                        </div>
+                        <div class="single-feature-list">
+                            <img src="Images/project-5-feature-bg-03.png" alt="">
+                            <h5>Unique & Creative Design</h5>
+                            <p>Writers and stars of Veep have responded incredulously to the new
+                                Australian politician required stitches after knocking himself uncon
+                                while laughing at the new season. 
+                            </p>
+                        </div>
+                        <div class="single-feature-list">
+                            <img src="Images/project-5-feature-bg-04.png" alt="">
+                            <h5>Unique & Creative Design</h5>
+                            <p>Writers and stars of Veep have responded incredulously to the new
+                                Australian politician required stitches after knocking himself uncon
+                                while laughing at the new season. 
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js" integrity="sha512-pumBsjNRGGqkPzKHndZMaAG+bir374sORyzM3uulLV14lN5LyykqNk8eEeUlUkB3U0M4FApyaHraT65ihJhDpQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js" integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
