--- a/Project-6/index.html
+++ b/Project-6/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project 5</title>
+    <title>Project 6</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" integrity="sha512-tS3S5qG0BlhnQROyJXvNjeEM4UpMXHrQfTGmbQ1gKmelCxlSEBUaxhRBj/EFTzpbP4RVSrpEikbmdJobCvhE3g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -67,6 +67,130 @@
                         </div>
                     </div>
                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="service-section">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="single-service-item">
+                        <div class="service-info">
+                            <img src="Images/service-icon-1.png" alt="">
+                            <h3>Online Marketing</h3>
+                            <p>impact scalab niche markets rather than collabora
+                                Interactively optimize fully tested data with
+                                Dramatically grow enterprise-wide
+                            </p>
+                            <a href="" class="border-less-service-btn">Read More  <i class="fa-solid fa-arrow-right"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="single-service-item">
+                        <div class="service-info">
+                            <img  src="Images/service-icon-2.png" alt="">
+                            <h3>Marketing Research</h3>
+                            <p>Professionally pontificate B2B innovation via low-risk 
+                                high-yield information. Interactively reconceptualize
+                                 flexible leadership skills 
+                            </p>
+                            <a href="" class="border-less-service-btn">Read More  <i class="fa-solid fa-arrow-right"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="single-service-item">
+                        <div class="service-info">
+                            <img src="Images/service-icon-3.png" alt="">
+                            <h3>Content Submission</h3>
+                            <p>Interactively architect frictionless action items with 
+                                extensive expertise. Phosfluorescently develop 
+                                user friendly meta-services.
+                            </p>
+                            <a href="" class="border-less-service-btn">Read More  <i class="fa-solid fa-arrow-right"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="single-service-item">
+                        <div class="service-info">
+                            <img src="Images/service-icon-4.png" alt="">
+                            <h3>Advanced Analytics</h3>
+                            <p>Recaptiualize just in time alignments before
+                                accurate mindshare. enhance leveraged infomed
+                                without best-of-breed content.
+                            </p>
+                            <a href="" class="border-less-service-btn">Read More  <i class="fa-solid fa-arrow-right"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="single-service-item">
+                        <div class="service-info">
+                            <img  src="Images/service-icon-5.png" alt="">
+                            <h3>PPC Management</h3>
+                            <p>Kectively underwhelm maintainable architectures 
+                                through parallel process improvements. 
+                                Rapidiously expedite user
+                            </p>
+                            <a href="" class="border-less-service-btn">Read More  <i class="fa-solid fa-arrow-right"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="single-service-item">
+                        <div class="service-info">
+                            <img src="Images/service-icon-6.png" alt="">
+                            <h3>Social Media Services</h3>
+                            <p> Distinctively engage transparent networks without 
+                                client-centric manufactured products. 
+                                Monotonectally actualize 
+                            </p>
+                            <a href="" class="border-less-service-btn">Read More  <i class="fa-solid fa-arrow-right"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="single-service-item">
+                        <div class="service-info">
+                            <img src="Images/service-icon-4.png" alt="">
+                            <h3>Advanced Analytics</h3>
+                            <p>Recaptiualize just in time alignments before
+                                accurate mindshare. enhance leveraged infomed
+                                without best-of-breed content.
+                            </p>
+                            <a href="" class="border-less-service-btn">Read More  <i class="fa-solid fa-arrow-right"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="single-service-item">
+                        <div class="service-info">
+                            <img  src="Images/service-icon-5.png" alt="">
+                            <h3>PPC Management</h3>
+                            <p>Kectively underwhelm maintainable architectures 
+                                through parallel process improvements. 
+                                Rapidiously expedite user
+                            </p>
+                            <a href="" class="border-less-service-btn">Read More  <i class="fa-solid fa-arrow-right"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="single-service-item">
+                        <div class="service-info">
+                            <img src="Images/service-icon-6.png" alt="">
+                            <h3>Social Media Services</h3>
+                            <p> Distinctively engage transparent networks without 
+                                client-centric manufactured products. 
+                                Monotonectally actualize 
+                            </p>
+                            <a href="" class="border-less-service-btn">Read More  <i class="fa-solid fa-arrow-right"></i></a>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
