--- a/Project-6/index.html
+++ b/Project-6/index.html
@@ -195,6 +195,93 @@
         </div>
     </div>
 
+    <div class="cta-section cta-bg">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12 text-center">
+                    <div class="cta-title">
+                        <h2>Create your own markeitng website</h2>
+                        <p>Writers and stars of Veep have responded incredulously to the news an Australian politician required stitches 
+                            Graham Perrett, a federal Labor MP in Queensland, was eating 
+                        </p>
+                    </div>
+                    <a href="#" class="cta-btn">Buy Now</a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="footer-area">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-3 text-left">
+                    <h5 class="footer-title">Product</h5>
+                    <div class="mainmenu-2">
+                        <ul>
+                            <li><a href="">Features</a></li>
+                            <li><a href="">Pricing</a></li>
+                            <li><a href="">Customers</a></li>
+                            <li><a href="">Page Builder</a></li>
+                            <li><a href="">What's new</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <h5 class="footer-title">Company</h5>
+                    <div class="mainmenu-2">
+                        <ul>
+                            <li><a href="">About us</a></li>
+                            <li><a href="">Try Demo</a></li>
+                            <li><a href="">Terms of service</a></li>
+                            <li><a href="">Page Builder</a></li>
+                            <li><a href="">Privacy policy</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <h5 class="footer-title">Help Center</h5>
+                    <div class="mainmenu-2">
+                        <ul>
+                            <li><a href="">Help centre</a></li>
+                            <li><a href="">Try Demo</a></li>
+                            <li><a href="">Message Us</a></li>
+                            <li><a href="">Blog</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="footer-hero">
+                        <h5 class="footer-title">Sign Up to Our Weekly Newslater</h5>
+                        <form action="submit" class="form-2">
+                            <input type="email" placeholder="Email Address">
+                            <input type="submit" value="Sign Up">
+                        </form>
+                    </div>
+                    <h5 class="Social">Social</h5>
+                    <div class="social-link">
+                        <li><a href=""><i class="fa-brands fa-facebook"></i> Facebook</a></li>
+                        <li><a href=""><i class="fa-brands fa-twitter"></i> Twitter</a></li>
+                        <li><a href=""><i class="fa-brands fa-pinterest"></i> Pinterest</a></li>
+                        <li><a href=""><i class="fa-brands fa-linkedin"></i> Linkedin</a></li>
+                        <li><a href=""><i class="fa-brands fa-instagram"></i> Instagram</a></li>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="copy-right-area">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12 text-center">
+                    <div class="copy-text">
+                        <p> © Traffic 2017. All rights reserved . Powered By crazycafe.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js" integrity="sha512-pumBsjNRGGqkPzKHndZMaAG+bir374sORyzM3uulLV14lN5LyykqNk8eEeUlUkB3U0M4FApyaHraT65ihJhDpQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js" integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
