--- a/Project-6/index.html
+++ b/Project-6/index.html
@@ -211,8 +211,8 @@
         </div>
     </div>
 
-    <div class="footer-area">
-        <div class="container">
+     <div class="footer-area">
+        <div class="container bg">
             <div class="row">
                 <div class="col-md-3 text-left">
                     <h5 class="footer-title">Product</h5>
@@ -238,7 +238,7 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-2">
                     <h5 class="footer-title">Help Center</h5>
                     <div class="mainmenu-2">
                         <ul>
@@ -249,12 +249,12 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-4 margin-left">
                     <div class="footer-hero">
                         <h5 class="footer-title">Sign Up to Our Weekly Newslater</h5>
                         <form action="submit" class="form-2">
                             <input type="email" placeholder="Email Address">
-                            <input type="submit" value="Sign Up">
+                            <button type="submit">Sign Up</button>
                         </form>
                     </div>
                     <h5 class="Social">Social</h5>
